test/cli/test-generate/namespaced-reference-name/generated-resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: reference-trigger-generated
  namespace: tenant
data:
  target: reference-trigger
