test/cli/test-generate/namespaced-reference-name/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: reference-trigger
  namespace: tenant
